information added with some css

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- File: /buchanan-west-church/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,10 +15,8 @@
         <li><a href="about.html">Pastor Bio</a></li>
         <li><a href="beliefs.html">Beliefs</a></li>
         <li><a href="calendar.html">Calendar</a></li>
-        <li><a href="sermons.html">Sermons</a></li>
-
         <li class="site-name">Buchanan West Baptist Church</li>
-   
+        <li><a href="sermons.html">Sermons</a></li>
         <li><a href="donation.html">Donation</a></li>
         <li><a href="vision.html">Vision</a></li>
         <li><a href="sunday-school.html">Sunday School</a></li>
@@ -29,7 +28,46 @@
 
   <section class="church-image">
     <div class="image-box">
-    <img src="images/church.jpg" alt="Church field view" />
+      <img src="images/church.jpg" alt="Church field view" />
+    </div>
+  </section>
+
+  <section class="upcoming-events">
+    <h2 class="center-heading">Upcoming Events</h2>
+    <ul class="events-list">
+      <li><strong>Sunday Worship:</strong> Every Sunday at 10:45 AM</li>
+      <li><strong>Wednesday Bible Study:</strong> Wednesdays at 7:00 PM</li>
+      <li><strong>Easter Service:</strong> March 31, 2025 - Sunrise at 7:00 AM</li>
+    </ul>
+  </section>
+
+  <section class="quick-links">
+    <h2 class="center-heading">Learn More About Us</h2>
+    <div class="links-grid">
+      <div class="link-item">
+        <h3><a href="about.html">Pastor Jamie Cheramie</a></h3>
+        <p>Read about Pastor Jamie's life, calling, and ministry journey from Louisiana to Texas and beyond.</p>
+      </div>
+      <div class="link-item">
+        <h3><a href="beliefs.html">Our Beliefs</a></h3>
+        <p>We believe Jesus Christ is the only way to Heaven. Learn more about our faith and commitment to God's Word.</p>
+      </div>
+      <div class="link-item">
+        <h3><a href="vision.html">Our Vision</a></h3>
+        <p>Discover our pillars: Word, Worship, Witness, Work—guiding our service to God and others.</p>
+      </div>
+      <div class="link-item">
+        <h3><a href="calendar.html">Event Calendar</a></h3>
+        <p>Stay informed about upcoming events, services, and community outreach activities.</p>
+      </div>
+      <div class="link-item">
+        <h3><a href="sermons.html">Sermons</a></h3>
+        <p>Watch and listen to recent sermons to grow in faith and understanding of Scripture.</p>
+      </div>
+      <div class="link-item">
+        <h3><a href="donation.html">Tithes & Offerings</a></h3>
+        <p>Support our mission through secure online giving via Venmo and other options.</p>
+      </div>
     </div>
   </section>
 </body>
