--- a/vision.html
+++ b/vision.html
@@ -15,8 +15,8 @@
         <li><a href="about.html">Pastor Bio</a></li>
         <li><a href="beliefs.html">Beliefs</a></li>
         <li><a href="calendar.html">Calendar</a></li>
-        <li class="site-name">Buchanan West Baptist Church</li>
         <li><a href="sermons.html">Sermons</a></li>
+        <li class="site-name">Buchanan West Baptist Church</li>
         <li><a href="donation.html">Donation</a></li>
         <li><a href="vision.html">Vision</a></li>
         <li><a href="sunday-school.html">Sunday School</a></li>
@@ -29,19 +29,30 @@
   <section class="page-content">
     <h1 class="center-heading">Our Vision</h1>
     <p class="center-text">At Buchanan West Baptist Church, our vision is centered around three pillars that guide our ministry and outreach.</p>
-
     <div class="vision-grid">
       <div class="vision-item">
         <h2>Word</h2>
         <p>We are committed to the faithful preaching and teaching of God's Word, equipping believers to grow in their faith and live out the Gospel daily.</p>
+        <p class="verses"> (2 Timothy 3:14-17)</p>
+        <p class="verses"> (2 Timothy 4:1-5)</p>
       </div>
       <div class="vision-item">
         <h2>Worship</h2>
         <p>We gather to glorify God through heartfelt worship, lifting His name in song, prayer, and praise as a unified body of Christ.</p>
+        <p class="verses">(John 4:23-24)</p>
+        <p class="verses">(Psalm 95:6)</p>
       </div>
       <div class="vision-item">
         <h2>Witness</h2>
         <p>We strive to be a light in our community and beyond, sharing the love of Christ through service, evangelism, and discipleship.</p>
+        <p class="verses">(Acts 1:8)</p>
+        <p class="verses">(2 Corinthians 5:17-21)</p>
+      </div>
+      <div class="vision-item">
+        <h2>Work</h2>
+        <p>We believe in putting our faith into action by serving others, supporting missions, and engaging in the work of the ministry with love and dedication.</p>
+        <p class="verses">(Ecclesiastes 4:9-12)</p>
+        <p class="verses">(Ephesians 4:1-16)</p>
       </div>
     </div>
 
