--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
         <li><a href="about.html">Pastor Bio</a></li>
         <li><a href="beliefs.html">Beliefs</a></li>
         <li><a href="calendar.html">Calendar</a></li>
-        <li class="site-name">Buchanan West Baptist Church</li>
         <li><a href="sermons.html">Sermons</a></li>
+        <li class="site-name">Buchanan West Baptist Church</li>
         <li><a href="donation.html">Donation</a></li>
         <li><a href="vision.html">Vision</a></li>
         <li><a href="sunday-school.html">Sunday School</a></li>
@@ -35,10 +35,10 @@
       <p>850 Lillian Dean<br>Buchanan Dam, TX 78609</p>
 
       <h2>Email</h2>
-      <p><a href="mailto:info@buchananwestbaptist.org">info@buchananwestbaptist.org</a></p>
+      <p><a href=""></a></p>
 
       <h2>Phone</h2>
-      <p>(123) 456-7890</p>
+      <p>+1(512) 793-2190</p>
 
       <h2>Map</h2>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3472.476146357898!2d-98.4434762848858!3d30.73893748163127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865b457d44b53ec3%3A0xd6ec847dbf0058cc!2s850%20Lillian%20Dean%20St%2C%20Buchanan%20Dam%2C%20TX%2078609!5e0!3m2!1sen!2sus!4v1700000000000" width="100%" height="300" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy"></iframe>
