--- a/donation.html
+++ b/donation.html
@@ -15,8 +15,8 @@
         <li><a href="about.html">Pastor Bio</a></li>
         <li><a href="beliefs.html">Beliefs</a></li>
         <li><a href="calendar.html">Calendar</a></li>
-        <li class="site-name">Buchanan West Baptist Church</li>
         <li><a href="sermons.html">Sermons</a></li>
+        <li class="site-name">Buchanan West Baptist Church</li>
         <li><a href="donation.html">Donation</a></li>
         <li><a href="vision.html">Vision</a></li>
         <li><a href="sunday-school.html">Sunday School</a></li>
@@ -33,7 +33,7 @@
     <div class="donation-box">
       <h2>Give via Venmo</h2>
       <p>Scan the QR code below or search for our Venmo handle <strong>@BuchananWestChurch</strong> to donate securely.</p>
-      <img src="images/venmo-qr.png" alt="Venmo QR Code" class="qr-code" />
+      <img src="images/venmo.png" alt="Venmo QR Code" class="qr-code" />
 
       <h3>Tithes and Offerings</h3>
       <p>Use Venmo to send your tithe or offering. Please include a note (e.g., "Tithe", "Offering", "Missions") with your donation for accurate allocation.</p>
