added pastor photo

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
   <section class="page-content">
     <h1 class="center-heading">Pastor Bio</h1>
     <div class="pastor-section">
-      <img src="images/pastor.jpg" alt="Pastor Portrait" class="pastor-image" />
+      <img src="images/pastor.JPG" alt="Pastor Portrait" class="pastor-image" />
       <p class="pastor-bio">
         Pastor Jamie Cheramie was born in 1970 in the heart of a small Cajun community in Golden Meadow, Louisiana. Growing up, he worked alongside his father on a shrimp boat, learning the values of hard work and perseverance. But his life took a transformational turn on October 30, 1984, when, at just 14 years old, he gave his life to Christ.
 
