--- a/sermons.html
+++ b/sermons.html
@@ -1,12 +1,14 @@
 <!-- File: /buchanan-west-church/sermons.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sermons - Buchanan West Baptist Church</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
   <header class="navbar">
     <nav>
@@ -26,23 +28,78 @@
     </nav>
   </header>
 
-  <section class="page-content">
+  <section class="page-content sermon-section">
     <h1 class="center-heading">Past Sermons</h1>
+    <p style="text-align:center; margin-bottom: 30px;">Watch recent sermons shared by Pastor Jamie Cheramie below:</p>
 
-    <div class="facebook-sermons">
-      <h2>Facebook Sermons</h2>
-      <p>You can watch our latest sermons posted by Pastor Jamie Cheramie on Facebook below:</p>
-      <div class="fb-page" data-href="https://www.facebook.com/Jamiecheramie" data-tabs="videos" data-width="500" data-height="600" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-        <blockquote cite="https://www.facebook.com/Jamiecheramie" class="fb-xfbml-parse-ignore">
-          <a href="https://www.facebook.com/Jamiecheramie">Jamie Cheramie</a>
-        </blockquote>
-      </div>
+    <div class="sermon-item">
+      <div class="sermon-date">Date: 3/16/2025</div>
+      <p class="sermon-description"><em>Series: Back to Jesus<br>One Unique Life<br>Mark 4:26-29</em></p>
+      <iframe
+        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1661629267893181%2F&show_text=true&width=560&t=0"
+        height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
+        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </div>
+
+    <div class="sermon-item">
+      <div class="sermon-date">Date: 3/09/2025</div>
+      <p class="sermon-description"><em>Series: Back to Jesus<br>“Parabolic Hearing Aids”<br>(Mark
+          4:10-12;21-25;33-34)</em></p>
+      <iframe
+        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1109157600980883%2F&show_text=true&width=560&t=0"
+        height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
+        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </div>
+
+    <div class="sermon-item">
+      <div class="sermon-date">Date: 3/02/2025</div>
+      <p class="sermon-description"><em>Series: Back to Jesus<br>“Do we really listen to God”<br>Mark 4:1-20</em></p>
+      <iframe
+        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F531813886113781%2F&show_text=true&width=560&t=0"
+        height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
+        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </div>
+
+    <div class="sermon-item">
+      <div class="sermon-date">Date: 2/16/2025</div>
+      <p class="sermon-description"><em>Series: Back to Jesus<br>A Remarkable Family<br>(Mark 3:20-35)</em></p>
+      <iframe
+        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1127094825406759%2F&show_text=true&width=560&t=0"
+        width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+        allowfullscreen="true"
+        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </div>
+
+    <div class="sermon-item">
+      <div class="sermon-date">Date: 2/09/2025</div>
+      <p class="sermon-description"><em>Series: Back to Jesus<br>The Master’s Strategy<br>(Mark 3:7-19)</em></p>
+      <iframe
+        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1136288004655437%2F&show_text=true&width=560&t=0"
+        width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+        allowfullscreen="true"
+        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </div>
+
+    <div class="sermon-item">
+      <div class="sermon-date">Date: 1/05/2025</div>
+      <p class="sermon-description"><em>Series: Back to Jesus<br>He’s Calling<br>(Mark 1:14-20)</em></p>
+      <iframe
+        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1841787239967726%2F&show_text=true&width=560&t=0"
+        width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+        allowfullscreen="true"
+        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </div>
+
+    <div class="sermon-item">
+      <div class="sermon-date">Date: 12/29/2024</div>
+      <p class="sermon-description"><em>Series: Back to Jesus<br>He’s Coming<br>(Mark 1:1-15)</em></p>
+      <iframe
+        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F581003264791554%2F&show_text=true&width=560&t=0"
+        width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+        allowfullscreen="true"
+        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
     </div>
   </section>
-
-  <!-- Facebook SDK -->
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0"></script>
 </body>
-</html>
 
+</html>
