--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
     <h2 class="center-heading">Upcoming Events</h2>
     <ul class="events-list">
       <li><strong>Sunday Worship:</strong> Every Sunday at 10:45 AM</li>
-      <li><strong>Wednesday Bible Study:</strong> Wednesdays at 7:00 PM</li>
-      <li><strong>Easter Service:</strong> March 31, 2025 - Sunrise at 7:00 AM</li>
+      <li><strong>Wednesday Bible Study:</strong> Wednesdays at 6:00 PM</li>
+      <li><strong>Shannon's Third Rodeo (Baby Sprinkle)</strong> April 5, 2025 - at 3:00 PM</li>
+      <li><strong>Easter Service:</strong> April 20, 2025 - at 10:45 AM</li>
+      <li><strong>VBS Magnified</strong> July 13 - 17, 2025 - at  5:30 - 8:00 PM</li> 
     </ul>
   </section>
 
