--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       <p>850 Lillian Dean<br>Buchanan Dam, TX 78609</p>
 
       <h2>Email</h2>
-      <p><a href=""></a></p>
+      <p><a href="mailto:buchananwbc@gmail.com">buchananwbc@gmail.com</a></p>
 
       <h2>Phone</h2>
       <p>+1(512) 793-2190</p>
