changed to 4 pillars

--- a/vision.html
+++ b/vision.html
@@ -28,7 +28,7 @@
 
   <section class="page-content">
     <h1 class="center-heading">Our Vision</h1>
-    <p class="center-text">At Buchanan West Baptist Church, our vision is centered around three pillars that guide our ministry and outreach.</p>
+    <p class="center-text">At Buchanan West Baptist Church, our vision is centered around four pillars that guide our ministry and outreach.</p>
     <div class="vision-grid">
       <div class="vision-item">
         <h2>Word</h2>
