--- a/sermons.html
+++ b/sermons.html
@@ -33,6 +33,12 @@
     <p style="text-align:center; margin-bottom: 30px;">Watch recent sermons shared by Pastor Jamie Cheramie below:</p>
 
     <div class="sermon-item">
+      <div class="sermon-date">Date: 03/23/2025</div>
+      <p class="sermon-description"><em>Series: Back to Jesus<br>One Unique Life 2<br>Mark 4:26-32</em></p>
+      <iframe src="https://www.facebook.com/plugins/video.php?height=314&amp;href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1443370357044919%2F&amp;show_text=true&amp;width=560&amp;t=0" width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </div>
+    
+    <div class="sermon-item">
       <div class="sermon-date">Date: 3/16/2025</div>
       <p class="sermon-description"><em>Series: Back to Jesus<br>One Unique Life<br>Mark 4:26-29</em></p>
       <iframe
