--- a/index.html
+++ b/index.html
@@ -35,12 +35,28 @@
   <section class="upcoming-events">
     <h2 class="center-heading">Upcoming Events</h2>
     <ul class="events-list">
-      <li><strong>Sunday Worship:</strong> Every Sunday at 10:45 AM</li>
-      <li><strong>Wednesday Bible Study:</strong> Wednesdays at 6:00 PM</li>
-      <li><strong>Shannon's Third Rodeo (Baby Sprinkle)</strong> April 5, 2025 - at 3:00 PM</li>
-      <li><strong>Easter Service:</strong> April 20, 2025 - at 10:45 AM</li>
-      <li><strong>VBS Magnified</strong> July 13 - 17, 2025 - at  5:30 - 8:00 PM</li> 
+      <li>
+        <strong>Sunday Worship:</strong> Every Sunday at 10:45 AM<br>
+        <img src="images/worship servicepic.PNG" alt="Sunday Worship" class="event-image">
+      </li>
+      <li>
+        <strong>Wednesday Bible Study:</strong> Wednesdays at 6:00 PM<br>
+        <img src="images/bible studypic.PNG" alt="Bible Study" class="event-image">
+      </li>
+      <li>
+        <strong>Shannon's Third Rodeo (Baby Sprinkle)</strong> April 5, 2025 - at 3:00 PM<br>
+        <img src="images/Rodeo.jpg" alt="Baby Sprinkle" class="event-image">
+      </li>
+      <li>
+        <strong>Easter Service:</strong> April 20, 2025 - at 10:45 AM<br>
+        <img src="images/easter service.PNG" alt="Easter Service" class="event-image">
+      </li>
+      <li>
+        <strong>VBS Magnified</strong> July 13 - 17, 2025 - at  5:30 - 8:00 PM<br>
+        <img src="images/magnifiedd.PNG" alt="VBS Magnified" class="event-image">
+      </li>
     </ul>
+    
   </section>
 
   <section class="quick-links">
