--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </li>
       <li>
         <strong>VBS Magnified</strong> July 13 - 17, 2025 - at  5:30 - 8:00 PM<br>
-        <img src="images/magnifiedd.PNG" alt="VBS Magnified" class="event-image">
+        <img src="images/magnified2.PNG" alt="VBS Magnified" class="event-image">
       </li>
     </ul>
     
