--- a/sermons.html
+++ b/sermons.html
@@ -1,15 +1,13 @@
-<!-- File: /buchanan-west-church/sermons.html -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sermons - Buchanan West Baptist Church</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
+  <a href="admin-login.html" class="admin-btn">Admin Login</a>
   <header class="navbar">
     <nav>
       <ul>
@@ -32,80 +30,42 @@
     <h1 class="center-heading">Past Sermons</h1>
     <p style="text-align:center; margin-bottom: 30px;">Watch recent sermons shared by Pastor Jamie Cheramie below:</p>
 
-    <div class="sermon-item">
-      <div class="sermon-date">Date: 03/23/2025</div>
-      <p class="sermon-description"><em>Series: Back to Jesus<br>One Unique Life 2<br>Mark 4:26-32</em></p>
-      <iframe src="https://www.facebook.com/plugins/video.php?height=314&amp;href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1443370357044919%2F&amp;show_text=true&amp;width=560&amp;t=0" width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-    </div>
-    
-    <div class="sermon-item">
-      <div class="sermon-date">Date: 3/16/2025</div>
-      <p class="sermon-description"><em>Series: Back to Jesus<br>One Unique Life<br>Mark 4:26-29</em></p>
-      <iframe
-        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1661629267893181%2F&show_text=true&width=560&t=0"
-        height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-    </div>
-
-    <div class="sermon-item">
-      <div class="sermon-date">Date: 3/09/2025</div>
-      <p class="sermon-description"><em>Series: Back to Jesus<br>“Parabolic Hearing Aids”<br>(Mark
-          4:10-12;21-25;33-34)</em></p>
-      <iframe
-        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1109157600980883%2F&show_text=true&width=560&t=0"
-        height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-    </div>
-
-    <div class="sermon-item">
-      <div class="sermon-date">Date: 3/02/2025</div>
-      <p class="sermon-description"><em>Series: Back to Jesus<br>“Do we really listen to God”<br>Mark 4:1-20</em></p>
-      <iframe
-        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F531813886113781%2F&show_text=true&width=560&t=0"
-        height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-    </div>
-
-    <div class="sermon-item">
-      <div class="sermon-date">Date: 2/16/2025</div>
-      <p class="sermon-description"><em>Series: Back to Jesus<br>A Remarkable Family<br>(Mark 3:20-35)</em></p>
-      <iframe
-        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1127094825406759%2F&show_text=true&width=560&t=0"
-        width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-        allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-    </div>
-
-    <div class="sermon-item">
-      <div class="sermon-date">Date: 2/09/2025</div>
-      <p class="sermon-description"><em>Series: Back to Jesus<br>The Master’s Strategy<br>(Mark 3:7-19)</em></p>
-      <iframe
-        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1136288004655437%2F&show_text=true&width=560&t=0"
-        width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-        allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-    </div>
-
-    <div class="sermon-item">
-      <div class="sermon-date">Date: 1/05/2025</div>
-      <p class="sermon-description"><em>Series: Back to Jesus<br>He’s Calling<br>(Mark 1:14-20)</em></p>
-      <iframe
-        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F1841787239967726%2F&show_text=true&width=560&t=0"
-        width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-        allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-    </div>
-
-    <div class="sermon-item">
-      <div class="sermon-date">Date: 12/29/2024</div>
-      <p class="sermon-description"><em>Series: Back to Jesus<br>He’s Coming<br>(Mark 1:1-15)</em></p>
-      <iframe
-        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FJamiecheramie%2Fvideos%2F581003264791554%2F&show_text=true&width=560&t=0"
-        width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-        allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-    </div>
+    <div id="sermons-list"></div>
   </section>
-</body>
 
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-app.js';
+    import { getFirestore, collection, getDocs, query, orderBy } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-firestore.js';
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyApi6lVmv7PaXJc9pJW9BpaOVqTEccoWsQ",
+      authDomain: "bucananchurchadmin.firebaseapp.com",
+      projectId: "bucananchurchadmin",
+      storageBucket: "bucananchurchadmin.firebasestorage.app",
+      messagingSenderId: "300936840591",
+      appId: "1:300936840591:web:8d6946bfe6822fa83577fa",
+      measurementId: "G-STS6Q128C9"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    const container = document.getElementById("sermons-list");
+    const q = query(collection(db, "sermons"), orderBy("date", "desc"));
+    const snapshot = await getDocs(q);
+
+    snapshot.forEach(docSnap => {
+      const { date, desc, iframe } = docSnap.data();
+      const div = document.createElement("div");
+      div.className = "sermon-item";
+      div.innerHTML = `
+        <div class="sermon-date">Date: ${date}</div>
+        <p class="sermon-description"><em>${desc.replace(/\n/g, '<br>')}</em></p>
+        ${iframe}
+      `;
+      container.appendChild(div);
+    });
+  </script>
+</body>
+<a href="admin.html" class="admin-btn">Admin Login</a>
 </html>
