--- a/vision.html
+++ b/vision.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+  <a href="admin-login.html" class="admin-btn">Admin Login</a>
   <header class="navbar">
     <nav>
       <ul>
@@ -63,4 +64,5 @@
     </div>
   </section>
 </body>
+<a href="admin.html" class="admin-btn">Admin Login</a>
 </html>
