--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -10,6 +10,7 @@
     textarea, input[type=text], input[type=date] { width: 100%; padding: 10px; margin-bottom: 10px; }
     button { padding: 10px 15px; font-weight: bold; }
     .section { margin-bottom: 30px; }
+    .logout-section { text-align: center; margin-top: 40px; }
   </style>
 </head>
 <body>
@@ -59,10 +60,14 @@
     <div id="calendar-list"></div>
   </div>
 
+  <div class="logout-section">
+    <button onclick="logout()">Logout</button>
+  </div>
+
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-app.js';
     import { getFirestore, collection, addDoc, deleteDoc, doc, query, where, getDocs } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-firestore.js';
-    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-auth.js';
+    import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/11.7.3/firebase-auth.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyApi6lVmv7PaXJc9pJW9BpaOVqTEccoWsQ",
@@ -84,6 +89,12 @@
         window.location.href = "admin.html";
       }
     });
+
+    window.logout = () => {
+      signOut(auth).then(() => {
+        window.location.href = "index.html";
+      });
+    };
 
     window.addEvent = async () => {
       const title = document.getElementById('event-title').value;
